--- a/Week 3 Assignment/index.html
+++ b/Week 3 Assignment/index.html
@@ -26,15 +26,15 @@
       <ul class="nav navbar-nav navbar-right" >
         <li style>
         <a href="#" > 
-        <span class="glyphicon glyphicon-cutlery"></span> chicken</a>
+        <span class="glyphicon glyphicon-cutlery"></span> Briyani</a>
         </li>
         <li>
         <a href="#" >
-        <span class="glyphicon glyphicon-info-sign"></span> beef</a>
+        <span class="glyphicon glyphicon-info-sign"></span> About</a>
         </li>
         <li>
         <a href="#">
-        <span class="glyphicon glyphicon-certificate"></span> sushi</a>
+        <span class="glyphicon glyphicon-certificate"></span> Award</a>
         </li>
       </ul>
     </div>
